# Super_Rocket_Train

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  texture template.pptx
TrackFiles/: right_is_bigger.txt  roundabout.txt  test1.txt
assets/images/skybox/: tool.txt
assets/model/Cirno/: ImageToStl.com_project_-_cirno_fumo_3d_scan.obj.bak  cirno_fumo_3d_scan.mtl
assets/model/arrow_blue/: arrow_boi.mtl
assets/model/cannon/: cannon.mtl
assets/model/island/: floating_island.mtl
assets/model/stone_pillar/: stone_pillar.mtl
assets/model/stone_pillar_section/: stone_pillar_section.mtl
assets/shaders/: drill.frag  drill.vert  ellipticalParticle.frag  ellipticalParticle.vert  frame.frag  frame.vert  instanceObject.vert  instanceObjectShadow.vert  islandHeight.frag  islandHeight.vert  model_loading.frag  model_loading.vert  model_loading_shadow.vert  particle.frag  particle.vert  pier.frag  simpleObject.frag  simpleObject.vert  simpleObjectshadow.frag  skyBox.frag  skyBox.vert  smoke.frag  smoke.vert  speedBg.frag  speedBg.vert  water.frag  water.vert  whiteLine.frag  whiteLine.vert
documents/: CG3-1_tech_document.docx  CG3-1_user_manual.docx  Project 3 Grading_final.docx  ~$3-1_tech_document.docx  ~$3_tech_document.docx  ~$3_user_manual.docx  ~WRL2689.tmp
include/assimp/: revision.h
lib/: GlU32.Lib  OpenGL32.Lib
lib/Debug/: assimp-vc142-mtd.lib  fltk_formsd.lib  fltk_gld.lib  fltk_imagesd.lib  fltk_jpegd.lib  fltk_pngd.lib  fltk_zd.lib
lib/Release/: assimp-vc142-mt.lib  fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
src/: CallBacks.H  CallBacks.cpp  EntityStructure.H  FreeCamera.cpp  FreeCamera.h  MathHelper.cpp  MathHelper.h  SoundBuffer.cpp  SoundSource.cpp  SoundSource.h  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp  main.cpp
src/RenderUnit/: Instance.cpp  Instance.h  InstanceDrawer.cpp  InstanceDrawer.h  ParticleSystem.cpp  ParticleSystem.h  RanderStructure.cpp  RanderStructure.h  RenderStructure.cpp  RenderStructure.h  Shader.h
src/Utilities/: 3DUtils.cpp  ArcBallCam.H  ArcBallCam.cpp  Pnt3f.H  Pnt3f.cpp
